[metadata]
name = dist-utils
version = 0.1.0
author = Katherine Crowson
author_email = crowsonkb@gmail.com
url = https://github.com/crowsonkb/dist-utils
description = Utilities for PyTorch distributed
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:

[options.entry_points]
console_scripts =
    torchrun_slurm = dist_utils.torchrun_slurm:main
